saas/web/beautypro/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beautypro

spec:
  replicas: 1

  selector:
    matchLabels:
      app: beautypro

  template:
    metadata:
      labels:
        app: beautypro

    spec:
      containers:
      - name: beautypro
        image: heiffigjr/saas-beautypro:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 3000
