saas/web/beautypro/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beautypro
spec:
  selector:
    app: beautypro
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
