saas/web/beautypro/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beautypro
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - beautypro-cloud.dnn.lat  
      secretName: wildcard-dnn

  rules:
    - host: beautypro-cloud.dnn.lat
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beautypro
                port:
                  number: 80
